--- a/src/Component/TableBooking/TableItemcss.css
+++ b/src/Component/TableBooking/TableItemcss.css
@@ -18,6 +18,9 @@
     border-radius: 50%;
     background-color: white;
     color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @media screen and (min-width:320px) and (max-width:480px){
